# symengine.rb

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  symengine.gemspec  symengine_version.txt
ext/symengine/: CMakeLists.txt  cmake_install.cmake  extconf.rb  ruby_basic.c  ruby_basic.h  ruby_complex.c  ruby_complex.h  ruby_complex_double.c  ruby_complex_double.h  ruby_complex_mpc.c  ruby_complex_mpc.h  ruby_constant.c  ruby_constant.h  ruby_constants.c  ruby_constants.h  ruby_function.c  ruby_function.h  ruby_integer.c  ruby_integer.h  ruby_matrix.c  ruby_matrix.h  ruby_ntheory.c  ruby_ntheory.h  ruby_number.c  ruby_number.h  ruby_real_double.c  ruby_real_double.h  ruby_real_mpfr.c  ruby_real_mpfr.h  ruby_symbol.c  ruby_symbol.h  ruby_utils.c  ruby_utils.h  symengine.c  symengine.h  symengine_macros.c  symengine_utils.c  symengine_utils.h
lib/: symengine.rb
lib/symengine/: basic.rb  complex.rb  complex_double.rb  dense_matrix.rb  integer.rb  iruby.rb  matrix_base.rb  real_double.rb  undef_function.rb
notebooks/: Gemfile  beginner.ipynb  differentiation_example.ipynb
spec/: arit_spec.rb  basic_spec.rb  complex_double_spec.rb  complex_spec.rb  constant_spec.rb  constants_spec.rb  evalf_spec.rb  function_symbol_spec.rb  functions_spec.rb  integer_spec.rb  lambdify_spec.rb  matrix_spec.rb  ntheory_spec.rb  rational_spec.rb  real_double_spec.rb  real_mpfr_spec.rb  spec_helper.rb  symbol_spec.rb  symengine_spec.rb
